ad_new_Result_submit